# prusa-fdm-mixer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: deploy.yml  sync-libraries.yml
apps/: landing.css
apps/calibration/: index.html  main.ts  styles.css
apps/gatherer/: index.html
apps/harness/: index.html  main.ts  styles.css
apps/playground/: index.html  main.ts  styles.css
apps/tuner/: cv.ts  loss.ts  main.ts  optimize.ts  params.ts  persist.ts
cpp/: CMakeLists.txt  README.md  filament_mix.cpp  filament_mix.hpp  test_filament_mix.cpp  test_prusa_fdm_mixer.cpp
data/: README.md  filament-library-hueforge.json  filament-library-openprinttag.json  filament-library.json  fitting-set.jsonl  holdout-set.jsonl
docs/: methodology.md
scripts/: sync-hueforge.ts  sync-library.ts  sync-openprinttag.ts  tsconfig.json
src/: cam16-ucs.ts  color.ts  delta-e.ts  filament-mix.ts  filament-mixer-coefficients.ts  filament-mixer.ts  gamma-rgb.ts  hueforge-style.ts  index.ts  kubelka-munk.ts  linear-rgb.ts  poly-mixer.ts  prusa-fdm-mixer.ts  yule-nielsen.ts
tests/: filament-mix.test.ts  prusa-fdm-mixer.test.ts  tuner.test.ts
